--- a/HomePage.css
+++ b/HomePage.css
@@ -54,8 +54,8 @@ a{
 }
 
 ul li{
-    padding-left: 1rem ;
-    padding-right: 1rem ;
+    padding: .5rem .5rem .5rem .5rem;
+    margin: .5rem .5rem .5rem .5rem;
     /* border: 2px solid black; */
 }
 
@@ -103,6 +103,7 @@ a{
     position: relative;
     top: 8rem;
     left: 4rem;
+    line-height: 70px;
 }
 
 .para
@@ -112,11 +113,13 @@ a{
     font-size: .9rem;
     color: black;
     padding-top: 55px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 23px;
 }
 
 .banner
 {
-    margin-top: 4rem;
+    margin-top: 0rem;
     height: 4rem;
     width: 16rem;
     font-size: large;
@@ -130,11 +133,15 @@ a{
 {
     color: white;
     background-color: black;
+    
 }
 
-a:hover
+.firstNav li:hover 
 {
-    text-decoration: underline .18rem rgb(28, 28, 187) ;
+
+    background-color: rgb(48, 48, 66);
+    color: white;
+    border-radius: 10px;
 }
 
 
